WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276143
[Catalyst] Mitigate sporadic keyboard task queue deadlocks when pressing arrow keys when editing
https://bugs.webkit.org/show_bug.cgi?id=276143
Summary
[Catalyst] Mitigate sporadic keyboard task queue deadlocks when pressing arro...
Wenson Hsieh
Reported
2024-07-02 13:32:17 PDT
rdar://88371405
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2024-07-02 14:44:20 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30411
EWS
Comment 2
2024-07-02 16:46:09 PDT
Committed
280598@main
(96ab975fa598): <
https://commits.webkit.org/280598@main
> Reviewed commits have been landed. Closing PR #30411 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug